<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editor_text"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editor_text_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editor_text_text_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/editor_text_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:hint="@string/editor_text_names_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editor_text_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editor_text_phone_hint"
        android:inputType="phone" />

    <EditText
        android:id="@+id/editor_text_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editor_text_number_hint"
        android:inputType="number" />

    <EditText
        android:id="@+id/editor_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editor_text_password_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editor_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editor_text_email_hint"
        android:inputType="textEmailAddress" />

</LinearLayout>